tests/machine/x/cpp/group_by_sort.error
line 43: ../../../tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_sort.cpp:43:39: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
   43 |     std::vector<std::pair<decltype((-([&](auto v) {
      |                                       ^
../../../tests/machine/x/cpp/group_by_sort.cpp:46:31: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
   46 |                           })(([&]() {
      |                               ^
../../../tests/machine/x/cpp/group_by_sort.cpp:54:27: error: template argument 1 is invalid
   54 |                           __struct3>>
      |                           ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_sort.cpp:54:36: error: template argument 1 is invalid
   54 |                           __struct3>>
      |                                    ^~
../../../tests/machine/x/cpp/group_by_sort.cpp:54:36: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_sort.cpp:57:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   57 |       __items.push_back(
      |               ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_sort.cpp:69:18: warning: narrowing conversion of ‘<lambda closure object>main()::<lambda()>::<lambda(auto:3)>().main()::<lambda()>::<lambda(auto:3)>(main()::<lambda()>::<lambda()>())’ from ‘int’ to ‘bool’ [-Wnarrowing]
   67 |                g.key, ([&](auto v) {
      |                       ~~~~~~~~~~~~~~
   68 |                  return std::accumulate(v.begin(), v.end(), 0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   69 |                })(([&]() {
      |                ~~^~~~~~~~~
   70 |                  std::vector<decltype(std::declval<__struct1>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   71 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
   72 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
   73 |                  }
      |                  ~
   74 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
   75 |                })())}});
      |                ~~~~~
../../../tests/machine/x/cpp/group_by_sort.cpp:77:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   77 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
../../../tests/machine/x/cpp/group_by_sort.cpp:77:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
   77 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
../../../tests/machine/x/cpp/group_by_sort.cpp:80:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   80 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from ../../../tests/machine/x/cpp/group_by_sort.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_by_sort.cpp:80:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   80 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~

 42 |     }
 43 |     std::vector<std::pair<decltype((-([&](auto v) {
 44 |                             return std::accumulate(
